--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
             <h2>사진 갤러리</h2>
             <div class="gallery">
                 <img src="photo1.jpg" alt="Photo 1">
+                <p>여기에 사진과 관련된 설명을 추가하세요.</p>
                 <img src="photo2.jpg" alt="Photo 2">
+                <p>여기에 사진과 관련된 설명을 추가하세요.</p>
                 <!-- 추가적인 사진들을 여기에 추가하세요 -->
             </div>
-            <p>여기에 사진과 관련된 설명을 추가하세요.</p>
         </section>
 
         <section id="videos">
@@ -28,6 +29,16 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/FQmZdcCOVG4" frameborder="0" allowfullscreen></iframe>
                 <!-- 추가적인 동영상들을 여기에 추가하세요 -->
                 <p>삼성 갤럭시 링 광고 입니다 헤헤</p>
+            </div>
+            <div class="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/FQmZdcCOVG4" frameborder="0" allowfullscreen></iframe>
+                <!-- 추가적인 동영상들을 여기에 추가하세요 -->
+                <p>무슨 광고입니다.</p>
+            </div>
+            <div class="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/FQmZdcCOVG4" frameborder="0" allowfullscreen></iframe>
+                <!-- 추가적인 동영상들을 여기에 추가하세요 -->
+                <p>강태은 바보입니다.</p>
             </div>
         </section>
     </main>
